# deprecate-until

./: Cargo.toml  README.md  deny.toml
.github/workflows/: pre-commit.yaml  tests.yml
src/: lib.rs
tests/: pass.rs  ui.rs
tests/ui/: fail.rs  fail.stderr  warn.rs  warn.stderr
