[package]
name = "deprecate-until"
description = "Rust attribute to force deprecated item removal at a specified version"
authors = ["Samuel Tardieu <sam@rfc1149.net>"]
repository = "https://github.com/samueltardieu/deprecate-until"
keywords = ["macros"]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0/MIT"
categories = ["development-tools"]
readme = "README.md"
rust-version = "1.60.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.76", default-features = false }
quote = { version = "1.0.34", default-features = false }
semver = { version = "1.0.21", default-features = false }
syn = { version = "2.0.48", default-features = false, features = ["parsing", "proc-macro"] }

[dev-dependencies]
trybuild = "1.0.89"

[lints.clippy]
pedantic = "deny"
